--- a/index.html
+++ b/index.html
@@ -1,40 +1,88 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TugasAwal</title>
-</head>
-<body>
-    <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Belajar Bootstrap</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <title>Tugas Bootstrap</title>
+  <!-- Install via CDN -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
+<body class="p-4">
 
-  <div class="container mt-5">
-    <h1 class="text-center text-primary">Halo Semua...</h1>
-    <p class="text-muted text-center">Ngiseng belajar struktur dasar HTML pake Bootstrap</p>
+  <!-- Judul -->
+  <h1 class="mb-4 text-center">Tugas Bootstrap</h1>
+
+  <!-- Bagian 1: Apa itu Bootstrap -->
+  <h2>Apa itu Bootstrap & Kenapa Dipakai?</h2>
+  <p>
+    <b>Bootstrap</b> adalah framework <i>front-end</i> berbasis <b>HTML, CSS, dan JavaScript</b> 
+    yang digunakan untuk mempermudah pembuatan website yang <b>responsif</b> dan <b>mobile-first</b>.
+  </p>
+  <p>Kenapa Bootstrap banyak dipakai?</p>
+  <ul>
+    <li>Mempercepat pembuatan website (banyak komponen siap pakai).</li>
+    <li>Desain otomatis responsif (bisa menyesuaikan dari HP sampai layar besar).</li>
+    <li>Tampilan modern tanpa perlu coding CSS dari nol.</li>
+  </ul>
+
+  <hr>
+
+  <!-- Bagian 2: Cara Install -->
+  <h2>Cara Install Bootstrap</h2>
+  <h4>1. Via CDN (lebih cepat & praktis)</h4>
+  <p>Tambahkan kode berikut di dalam tag <code>&lt;head&gt;</code> HTML:</p>
+  <pre><code>&lt;link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"&gt;</code></pre>
+
+  <h4>2. Via Lokal (offline)</h4>
+  <p>
+    - Download file Bootstrap dari <a href="https://getbootstrap.com" target="_blank">getbootstrap.com</a><br>
+    - Simpan di folder project (misal <code>css/bootstrap.min.css</code>)<br>
+    - Tambahkan link ke HTML:
+  </p>
+  <pre><code>&lt;link href="css/bootstrap.min.css" rel="stylesheet"&gt;</code></pre>
+
+  <hr>
+
+  <!-- Bagian 3: Struktur dasar -->
+  <h2>Struktur Dasar HTML + Bootstrap</h2>
+  <p>
+    Setiap file HTML Bootstrap biasanya terdiri dari <code>&lt;head&gt;</code> 
+    (berisi link CSS Bootstrap) dan <code>&lt;body&gt;</code> (konten website).
+  </p>
+  <pre><code>&lt;!DOCTYPE html&gt;
+&lt;html&gt;
+  &lt;head&gt;
+    &lt;link href="bootstrap.min.css" rel="stylesheet"&gt;
+  &lt;/head&gt;
+  &lt;body&gt;
+    &lt;div class="container"&gt; ... &lt;/div&gt;
+  &lt;/body&gt;
+&lt;/html&gt;
+</code></pre>
+
+  <hr>
+
+  <!-- Bagian 4: Container & Grid -->
+  <h2>Container & Grid System Dasar</h2>
+  <p>
+    Bootstrap menggunakan <b>Grid System</b> untuk membagi halaman ke dalam baris (<code>.row</code>) 
+    dan kolom (<code>.col</code>).
+  </p>
+
+  <div class="container">
+    <div class="row text-white text-center">
+      <div class="col-md-4 p-3 bg-primary">Kolom 1</div>
+      <div class="col-md-4 p-3 bg-success">Kolom 2</div>
+      <div class="col-md-4 p-3 bg-danger">Kolom 3</div>
+    </div>
   </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-  <div class="container mt-5">
-  <div class="row">
-    <div class="col bg-primary text-white p-3">Kolom 1</div>
-    <div class="col bg-success text-white p-3">Kolom 2</div>
-    <div class="col bg-danger text-white p-3">Kolom 3</div>
-  </div>
-</div>
-<div class="container mt-5">
-  <div class="row">
-    <div class="col-4 bg-warning p-3">Lebar 4</div>
-    <div class="col-8 bg-info p-3">Lebar 8</div>
-  </div>
-</div>
+  <p class="mt-3">
+    Contoh di atas: 1 baris (<code>.row</code>) dengan 3 kolom 
+    (<code>.col-md-4</code>) yang otomatis responsif.
+  </p>
+
+  <hr>
 
 </body>
 </html>
